# job-auto-agent

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
dashboard/: app.py
data/profile/: application_profile.example.json  master_resume.example.md  profile.example.json
src/job_auto_agent/: __init__.py  cli.py  config.py  models.py  validation.py
src/job_auto_agent/application/: __init__.py  assist.py  dashboard.py  export.py  profile.py  workflow.py
src/job_auto_agent/cover_letter/: __init__.py  generator.py
src/job_auto_agent/extraction/: __init__.py  pipeline.py
src/job_auto_agent/gmail/: auth.py  client.py
src/job_auto_agent/matching/: __init__.py  engine.py
src/job_auto_agent/resume/: __init__.py  tailor.py
src/job_auto_agent/storage/: __init__.py  database.py  repository.py
tests/: test_application_workflow.py  test_assist_apply.py  test_config.py  test_cover_letter.py  test_dashboard_assist.py  test_extraction.py  test_matching.py  test_resume_tailor.py  test_storage.py  test_validation.py
